--- a/roles/basic_setup/tasks/main.yml
+++ b/roles/basic_setup/tasks/main.yml
@@ -170,6 +170,6 @@
     state: present
     mode: 0440
     create: yes
-    #validate: "visudo -cf %s"
+    validate: "visudo -cf %s"
   become: true
   
